# Backend/backend-api/routes/api.php
@@ -5,7 +5,21 @@ use App\Http\Controllers\ReportController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\UserController;
 
-Route::middleware('auth:api')->apiResource('reports', ReportController::class);
+Route::middleware('auth:api')->group(function () { 
+    Route::post('/reports', [ReportController::class, 'store']);
+    
+    // Admin and Developer only
+    Route::middleware('role:admin,developer')->group(function () {
+        Route::get('/reports', [ReportController::class, 'index']);
+        Route::put('/reports/{id}', [ReportController::class, 'update']);
+    });
+    
+    // Admin only
+    Route::middleware('role:admin')->group(function () {
+        Route::delete('/reports/{id}', [ReportController::class, 'destroy']);
+    });
+});
+
 
 Route::post('register', [AuthController::class, 'register'])->name('register');
 Route::post('login', [AuthController::class, 'login'])->name('login');
